[package]
name = "mqttping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"]}
paho-mqtt = "0.10"
log = "0.4.17"
env_logger = "0.8.4"
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
cmake = "0.1"
